--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,7 +1,7 @@
 name: Playwright Tests
 on:
     push:
-        branches: [main, master]
+        branches: [main, master, debug-test]
     pull_request:
         branches: [main, master]
 jobs:
